--- a/variants/v1.5.3153.0-bf2all64-bf2stats-2.3.3/Dockerfile
+++ b/variants/v1.5.3153.0-bf2all64-bf2stats-2.3.3/Dockerfile
@@ -18,23 +18,23 @@ RUN mkdir -p /server
 RUN cat /install/license.sh | sed 's/^more/cat/' > /install/license-fixed.sh # Show the licenses without a pager
 RUN cd /install && printf '\naccept\n\nyes\n/server\ny\n' | sh /install/license-fixed.sh # Agree to licenses
 
-# Install bf2hub
+# Install bf2all64 mod
 WORKDIR /root
-RUN curl -sSLO https://www.bf2hub.com/downloads/BF2Hub-Unranked-Linux-R3.tar.gz
-RUN sha256sum BF2Hub-Unranked-Linux-R3.tar.gz | grep '^c4b3d583741c500e930502e96c6a43a40f223868c9ca1111c70d80c7e6d2cd2b '
-RUN tar -C /server/bf2 -zxvf BF2Hub-Unranked-Linux-R3.tar.gz -- bin start_bf2hub.sh
-RUN ls -al /server/bf2
-RUN mv /server/bf2/start_bf2hub.sh /server/bf2/start.sh
-RUN chmod +x /server/bf2/bin/ia-32/libbf2hub.so /server/bf2/bin/amd-64/libbf2hub.so
+RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -y unzip
+RUN curl -sSLO https://files.startersclan.com/ea/bf2/bf2all64_v1.0_setup.zip
+RUN sha256sum bf2all64_v1.0_setup.zip | grep '^4ee82d91043c4afbf1bed50787cbf98af124bd7e6c608cdb0f5115c7761024f1 '
+RUN unzip bf2all64_v1.0_setup.zip -d extract
+RUN rm -rf /server/bf2/mods/bf2all64
+RUN mv extract/bf2all64 /server/bf2/mods
 
-# Install bf2hub
+# Install bf2stats 2
 WORKDIR /root
-RUN curl -sSLO https://www.bf2hub.com/downloads/BF2Hub-Unranked-Linux-R3.tar.gz
-RUN sha256sum BF2Hub-Unranked-Linux-R3.tar.gz | grep '^c4b3d583741c500e930502e96c6a43a40f223868c9ca1111c70d80c7e6d2cd2b '
-RUN tar -C /server/bf2 -zxvf BF2Hub-Unranked-Linux-R3.tar.gz -- bin start_bf2hub.sh
-RUN ls -al /server/bf2
-RUN mv /server/bf2/start_bf2hub.sh /server/bf2/start.sh
-RUN chmod +x /server/bf2/bin/ia-32/libbf2hub.so /server/bf2/bin/amd-64/libbf2hub.so
+RUN export DEBIAN_FRONTEND=noninteractive && apt-get update && apt-get install -y unzip
+RUN curl -sSLO https://github.com/startersclan/bf2stats/archive/refs/tags/2.3.3.zip
+RUN sha256sum 2.3.3.zip | grep '^21c2a7cdd3acfa7365af39085b2a514212dd18821c1ec2817af40b4fca00c8a6 '
+RUN unzip 2.3.3.zip -d extract
+RUN rm -rf /server/bf2/python
+RUN mv extract/bf2stats-2.3.3/src/python /server/bf2/python
 
 # Install ESAI in all mods
 WORKDIR /root
