Docs (examples): Fix spoofed DNS in examples
Certain examples' `docker-compose.yml` had `extra_hosts` containing a mix of private IPs and `bf2hub.com` IPs, instead of just being private IPs.

Now these examples are fixed to contain only private IPs, to be clear that the bf2 server requires a private master server.

--- a/docs/examples/v1.5-bf2hub-spoofed/docker-compose.yml
+++ b/docs/examples/v1.5-bf2hub-spoofed/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '2.2'
 services:
-  # This is identical to the `v1.5-bf2hub` example
-  # It runs the official BF2 1.5 dedicated server binaries, and spoofs Gamespy DNS to use BF2Hub as the master server and the ASP web server
+  # This is identical to the `v1.5-bf2hub` example, except that it runs the official BF2 1.5 dedicated server binaries, and spoofs Gamespy DNS to use BF2Hub as the master server and the ASP web server
   # Server will be unranked since there is no custom ASP web server stats system
   bf2:
     image: startersclan/docker-bf2:v1.5.3153.0
