--- a/docs/examples/v1.5-bf2stats-3/docker-compose.yml
+++ b/docs/examples/v1.5-bf2stats-3/docker-compose.yml
@@ -18,6 +18,18 @@ services:
       - 29900:29900/udp
     networks:
       - default
+    extra_hosts:
+      - battlefield2.available.gamespy.com:192.168.1.100 # Your master server IP
+      - battlefield2.master.gamespy.com:192.168.1.100 # Your master server IP
+      - battlefield2.ms14.gamespy.com:192.168.1.100 # Your master server IP
+      - master.gamespy.com:192.168.1.100 # Your master server IP
+      - motd.gamespy.com:192.168.1.100 # Your master server IP
+      - gpsp.gamespy.com:192.168.1.100 # Your master server IP
+      - gpcm.gamespy.com:192.168.1.100 # Your master server IP
+      - gamespy.com:192.168.1.100 # Your master server IP
+      - bf2web.gamespy.com:192.168.1.100 # Your ASP web server IP
+      - gamestats.gamespy.com:192.168.1.100 # Your ASP web server IP
+      - eapusher.dice.se:192.168.1.100 # Your ASP web server IP
     healthcheck:
       test: /healthcheck localhost 29900
     tty: true
