--- a/.github/workflows/ci-master-pr.yml
+++ b/.github/workflows/ci-master-pr.yml
@@ -390,6 +390,132 @@ jobs:
       run: docker logout
       if: always()
 
+  build-v1-5-3153-0-bf2all64-bf2stats-2-3-4:
+    runs-on: ubuntu-latest
+    env:
+      VARIANT_TAG: v1.5.3153.0-bf2all64-bf2stats-2.3.4
+      VARIANT_BUILD_DIR: variants/v1.5.3153.0-bf2all64-bf2stats-2.3.4
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Display system info (linux)
+      run: |
+        set -e
+        hostname
+        whoami
+        cat /etc/*release
+        lscpu
+        free
+        df -h
+        pwd
+        docker info
+        docker version
+
+    # See: https://github.com/docker/build-push-action/blob/v2.6.1/docs/advanced/cache.md#github-cache
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@master
+
+    - name: Cache Docker layers
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
+    - name: Prepare
+      id: prep
+      run: |
+        set -e
+
+        # Get 'namespace' and 'project-name' from 'namespace/project-name'
+        # CI_PROJECT_NAMESPACE=$( echo "${{ github.repository }}" | cut -d '/' -f 1 )
+        # CI_PROJECT_NAME=$( echo "${{ github.repository }}" | cut -d '/' -f 2 )
+
+        # Get ref, i.e. <branch_name> from refs/heads/<branch_name>, or <tag-name> from refs/tags/<tag_name>. E.g. 'master' or 'v1.2.3'
+        REF=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+
+        # Get commit hash E.g. 'b29758a'
+        SHA_SHORT=$( echo "${GITHUB_SHA}" | cut -c1-7 )
+
+        # Generate the final tags. E.g. 'master-mytag' and 'master-b29758a-mytag'
+        VARIANT_TAG_WITH_REF="${REF}-${VARIANT_TAG}"
+        VARIANT_TAG_WITH_REF_AND_SHA_SHORT="${REF}-${SHA_SHORT}-${VARIANT_TAG}"
+
+        # Pass variables to next step
+        # echo "CI_PROJECT_NAMESPACE=$CI_PROJECT_NAMESPACE" >> $GITHUB_ENV
+        # echo "CI_PROJECT_NAME=$CI_PROJECT_NAME" >> $GITHUB_ENV
+        # echo "REF=$REF" >> $GITHUB_ENV
+        # echo "SHA_SHORT=$SHA_SHORT" >> $GITHUB_ENV
+        # echo "REF_AND_SHA_SHORT=$REF_AND_SHA_SHORT" >> $GITHUB_ENV
+        echo "VARIANT_BUILD_DIR=$VARIANT_BUILD_DIR" >> $GITHUB_ENV
+        echo "VARIANT_TAG=$VARIANT_TAG" >> $GITHUB_ENV
+        echo "VARIANT_TAG_WITH_REF=$VARIANT_TAG_WITH_REF" >> $GITHUB_ENV
+        echo "VARIANT_TAG_WITH_REF_AND_SHA_SHORT=$VARIANT_TAG_WITH_REF_AND_SHA_SHORT" >> $GITHUB_ENV
+
+    - name: Login to docker registry
+      if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
+      run: echo "${DOCKERHUB_REGISTRY_PASSWORD}" | docker login -u "${DOCKERHUB_REGISTRY_USER}" --password-stdin
+      env:
+        DOCKERHUB_REGISTRY_USER: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
+        DOCKERHUB_REGISTRY_PASSWORD: ${{ secrets.DOCKERHUB_REGISTRY_PASSWORD }}
+
+    - name: Build (PRs)
+      id: docker_build_pr
+      # Run only on pull requests
+      if: github.event_name == 'pull_request'
+      uses: docker/build-push-action@v3
+      with:
+        context: ${{ env.VARIANT_BUILD_DIR }}
+        platforms: linux/386,linux/amd64
+        push: false
+        tags: |
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF }}
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+
+    - name: Build and push (master)
+      id: docker_build_master
+      # Run only on master
+      if: github.ref == 'refs/heads/master'
+      uses: docker/build-push-action@v3
+      with:
+        context: ${{ env.VARIANT_BUILD_DIR }}
+        platforms: linux/386,linux/amd64
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF }}
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-to: type=local,dest=/tmp/.buildx-cache
+
+    - name: Build and push (release)
+      id: docker_build_release
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: docker/build-push-action@v3
+      with:
+        context: ${{ env.VARIANT_BUILD_DIR }}
+        platforms: linux/386,linux/amd64
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ env.VARIANT_TAG }}
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF }}
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+
+    - name: List docker images
+      run: docker images
+
+    - name: Clean-up
+      run: docker logout
+      if: always()
+
   build-v1-5-3153-0-bf2all64-bf2stats-2-4-2:
     runs-on: ubuntu-latest
     env:
@@ -1020,6 +1146,132 @@ jobs:
       run: docker logout
       if: always()
 
+  build-v1-5-3153-0-bf2stats-2-3-4:
+    runs-on: ubuntu-latest
+    env:
+      VARIANT_TAG: v1.5.3153.0-bf2stats-2.3.4
+      VARIANT_BUILD_DIR: variants/v1.5.3153.0-bf2stats-2.3.4
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Display system info (linux)
+      run: |
+        set -e
+        hostname
+        whoami
+        cat /etc/*release
+        lscpu
+        free
+        df -h
+        pwd
+        docker info
+        docker version
+
+    # See: https://github.com/docker/build-push-action/blob/v2.6.1/docs/advanced/cache.md#github-cache
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@master
+
+    - name: Cache Docker layers
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
+    - name: Prepare
+      id: prep
+      run: |
+        set -e
+
+        # Get 'namespace' and 'project-name' from 'namespace/project-name'
+        # CI_PROJECT_NAMESPACE=$( echo "${{ github.repository }}" | cut -d '/' -f 1 )
+        # CI_PROJECT_NAME=$( echo "${{ github.repository }}" | cut -d '/' -f 2 )
+
+        # Get ref, i.e. <branch_name> from refs/heads/<branch_name>, or <tag-name> from refs/tags/<tag_name>. E.g. 'master' or 'v1.2.3'
+        REF=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
+
+        # Get commit hash E.g. 'b29758a'
+        SHA_SHORT=$( echo "${GITHUB_SHA}" | cut -c1-7 )
+
+        # Generate the final tags. E.g. 'master-mytag' and 'master-b29758a-mytag'
+        VARIANT_TAG_WITH_REF="${REF}-${VARIANT_TAG}"
+        VARIANT_TAG_WITH_REF_AND_SHA_SHORT="${REF}-${SHA_SHORT}-${VARIANT_TAG}"
+
+        # Pass variables to next step
+        # echo "CI_PROJECT_NAMESPACE=$CI_PROJECT_NAMESPACE" >> $GITHUB_ENV
+        # echo "CI_PROJECT_NAME=$CI_PROJECT_NAME" >> $GITHUB_ENV
+        # echo "REF=$REF" >> $GITHUB_ENV
+        # echo "SHA_SHORT=$SHA_SHORT" >> $GITHUB_ENV
+        # echo "REF_AND_SHA_SHORT=$REF_AND_SHA_SHORT" >> $GITHUB_ENV
+        echo "VARIANT_BUILD_DIR=$VARIANT_BUILD_DIR" >> $GITHUB_ENV
+        echo "VARIANT_TAG=$VARIANT_TAG" >> $GITHUB_ENV
+        echo "VARIANT_TAG_WITH_REF=$VARIANT_TAG_WITH_REF" >> $GITHUB_ENV
+        echo "VARIANT_TAG_WITH_REF_AND_SHA_SHORT=$VARIANT_TAG_WITH_REF_AND_SHA_SHORT" >> $GITHUB_ENV
+
+    - name: Login to docker registry
+      if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
+      run: echo "${DOCKERHUB_REGISTRY_PASSWORD}" | docker login -u "${DOCKERHUB_REGISTRY_USER}" --password-stdin
+      env:
+        DOCKERHUB_REGISTRY_USER: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
+        DOCKERHUB_REGISTRY_PASSWORD: ${{ secrets.DOCKERHUB_REGISTRY_PASSWORD }}
+
+    - name: Build (PRs)
+      id: docker_build_pr
+      # Run only on pull requests
+      if: github.event_name == 'pull_request'
+      uses: docker/build-push-action@v3
+      with:
+        context: ${{ env.VARIANT_BUILD_DIR }}
+        platforms: linux/386,linux/amd64
+        push: false
+        tags: |
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF }}
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+
+    - name: Build and push (master)
+      id: docker_build_master
+      # Run only on master
+      if: github.ref == 'refs/heads/master'
+      uses: docker/build-push-action@v3
+      with:
+        context: ${{ env.VARIANT_BUILD_DIR }}
+        platforms: linux/386,linux/amd64
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF }}
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-to: type=local,dest=/tmp/.buildx-cache
+
+    - name: Build and push (release)
+      id: docker_build_release
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: docker/build-push-action@v3
+      with:
+        context: ${{ env.VARIANT_BUILD_DIR }}
+        platforms: linux/386,linux/amd64
+        push: true
+        tags: |
+          ${{ github.repository }}:${{ env.VARIANT_TAG }}
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF }}
+          ${{ github.repository }}:${{ env.VARIANT_TAG_WITH_REF_AND_SHA_SHORT }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+
+    - name: List docker images
+      run: docker images
+
+    - name: Clean-up
+      run: docker logout
+      if: always()
+
   build-v1-5-3153-0-bf2stats-2-4-2:
     runs-on: ubuntu-latest
     env:
@@ -1525,7 +1777,7 @@ jobs:
       if: always()
 
   update-draft-release:
-    needs: [build-v1-5-3153-0, build-v1-5-3153-0-bf2all64, build-v1-5-3153-0-bf2all64-bf2stats-2-2-0, build-v1-5-3153-0-bf2all64-bf2stats-2-4-2, build-v1-5-3153-0-bf2all64-bf2stats-3-1-0, build-v1-5-3153-0-bf2all64-bf2stats-3-1-2, build-v1-5-3153-0-bf2hub, build-v1-5-3153-0-bf2stats-2-2-0, build-v1-5-3153-0-bf2stats-2-4-2, build-v1-5-3153-0-bf2stats-3-1-0, build-v1-5-3153-0-bf2stats-3-1-2, build-v1-5-3153-0-fh2-4-6-304]
+    needs: [build-v1-5-3153-0, build-v1-5-3153-0-bf2all64, build-v1-5-3153-0-bf2all64-bf2stats-2-2-0, build-v1-5-3153-0-bf2all64-bf2stats-2-3-4, build-v1-5-3153-0-bf2all64-bf2stats-2-4-2, build-v1-5-3153-0-bf2all64-bf2stats-3-1-0, build-v1-5-3153-0-bf2all64-bf2stats-3-1-2, build-v1-5-3153-0-bf2hub, build-v1-5-3153-0-bf2stats-2-2-0, build-v1-5-3153-0-bf2stats-2-3-4, build-v1-5-3153-0-bf2stats-2-4-2, build-v1-5-3153-0-bf2stats-3-1-0, build-v1-5-3153-0-bf2stats-3-1-2, build-v1-5-3153-0-fh2-4-6-304]
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
@@ -1538,7 +1790,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-draft-release:
-    needs: [build-v1-5-3153-0, build-v1-5-3153-0-bf2all64, build-v1-5-3153-0-bf2all64-bf2stats-2-2-0, build-v1-5-3153-0-bf2all64-bf2stats-2-4-2, build-v1-5-3153-0-bf2all64-bf2stats-3-1-0, build-v1-5-3153-0-bf2all64-bf2stats-3-1-2, build-v1-5-3153-0-bf2hub, build-v1-5-3153-0-bf2stats-2-2-0, build-v1-5-3153-0-bf2stats-2-4-2, build-v1-5-3153-0-bf2stats-3-1-0, build-v1-5-3153-0-bf2stats-3-1-2, build-v1-5-3153-0-fh2-4-6-304]
+    needs: [build-v1-5-3153-0, build-v1-5-3153-0-bf2all64, build-v1-5-3153-0-bf2all64-bf2stats-2-2-0, build-v1-5-3153-0-bf2all64-bf2stats-2-3-4, build-v1-5-3153-0-bf2all64-bf2stats-2-4-2, build-v1-5-3153-0-bf2all64-bf2stats-3-1-0, build-v1-5-3153-0-bf2all64-bf2stats-3-1-2, build-v1-5-3153-0-bf2hub, build-v1-5-3153-0-bf2stats-2-2-0, build-v1-5-3153-0-bf2stats-2-3-4, build-v1-5-3153-0-bf2stats-2-4-2, build-v1-5-3153-0-bf2stats-3-1-0, build-v1-5-3153-0-bf2stats-3-1-2, build-v1-5-3153-0-fh2-4-6-304]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
